ethio-core/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ethio-core
  labels:
    app.kubernetes.io/name: ethio-core
    app.kubernetes.io/part-of: ethio-banking-platform
